--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     font-size: 1.3rem;
-    background-color: #ffd6e5;
+    background-color: #ffd6e5;;
     color: #020252;
 
 }
@@ -70,7 +70,7 @@ input[type=number] {
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-sizing: border-box;
+    box-sizing: border-box;;
 }
 
 button {
@@ -79,6 +79,8 @@ button {
     padding: 8px;
     border-radius: 8px;
     font-size: 1.1rem;
+    font-style: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 footer {
@@ -87,4 +89,10 @@ footer {
 
 .thema {
     text-align: center;
+}
+
+.script {
+    text-align: left;
+    font-size: 1.2rem;
+    color: #020252;
 }
